log
Thu 09 May 2024 03:07:38 PM UTC: 
 tests:  1|8
total_score: 0/70
a133dde
Thu 09 May 2024 03:19:59 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
b2d6f1d
Thu 09 May 2024 03:23:05 PM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
2430d48
Thu 09 May 2024 03:31:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:79:13: error: too few arguments to function ‘is_equal’
   79 |         if (is_equal(key, aux->pair->key)) {
      |             ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
03a5aa4
Thu 09 May 2024 03:32:47 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
6f7d85f
Thu 09 May 2024 04:00:58 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
c5f1aae
Thu 09 May 2024 04:11:30 PM UTC: 
 treemap.c | 32 ++++++++++++++++++++------------
 1 file changed, 20 insertions(+), 12 deletions(-)
 tests:  10|6
total_score: 15/70
18e98b6
Thu 09 May 2024 04:12:51 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|6
total_score: 15/70
706d0b5
Thu 09 May 2024 09:04:41 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  12|5
total_score: 15/70
1667f55
Thu 09 May 2024 09:13:29 PM UTC: 
 treemap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  19|3
total_score: 35/70
68d67f8
Sat 11 May 2024 05:13:17 PM UTC: 
 treemap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  22|2
total_score: 50/70
80aa50c
Sat 11 May 2024 06:16:33 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:169:14: error: ‘ub’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  169 |     return ub->pair;
      |            ~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bd146e4
Sat 11 May 2024 06:17:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
215873c
Sat 11 May 2024 06:22:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1b8a617
Sat 11 May 2024 06:23:03 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  26|1
total_score: 60/70
a2c322e
Sat 11 May 2024 06:29:20 PM UTC: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  26|1
total_score: 60/70
6283fd4
